<resources>
    <!-- 민서 Works -->
    <string name="app_name">달력</string>

    <array name="custom_weekdays">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </array>

    <string-array name="custom_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>
    <!-- 민서 Works -->


    <!-- 장훈 Works -->
    <string name="app_name2">Settings</string>
    <string name="app_name3">알림 설정</string>
    <string name="action_settings">Settings</string>
    <string name="action_toNotification">알림 설정</string>
    <string name="action_toCalendar">달력 보기</string>
    <string name="action_toDailylog">일지 보기</string>

    <string name="farm_address">농장 주소 :</string>
    <string name="farm_address_hint">주소를 입력해주세요</string>
    <string name="crops">작물:</string>
    <string name="crop_hint">품종을 입력해주세요</string>
    <string name="areas">면적:</string>
    <string name="areas_hint">면적(평)을 입력해주세요</string>
    <string name="address">주소:</string>
    <string name="address_hint">주소를 입력해주세요</string>
    <string name="price_per_area">주당 가격:</string>
    <string name="price_per_area_hint">가격을 입력해주세요</string>
    <string name="working_content">작업 내용:</string>
    <string name="working_content_hint">내용을 기입하지 않을 시,\n자동으로 올라가는 \n내용을 설정해주세요\n\n\nex)경작완료 했습니다</string>
    <string name="setting_save">설정 저장</string>

    <string name="temperature">온도</string>
    <string name="humidity">습도</string>
    <string name="co2">CO2</string>
    <string name="root">뿌리온도</string>
    <string name="soil">토양온도</string>
    <string name="max_value">최고</string>
    <string name="min_value">최저</string>
    <string name="value">값</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_nav_temp">nav_temp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <!-- 장훈 Works -->

</resources>

