<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="85dp"
                android:text="@string/farm_address"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/crops"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/areas"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/address"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/price_per_area"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/working_content"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/farm_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="72dp"
                android:ems="10"
                android:hint="@string/farm_address_hint"
                android:inputType="textMultiLine|textNoSuggestions" />

            <EditText
                android:id="@+id/crops"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:ems="10"
                android:hint="@string/crop_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:ems="10"
                android:hint="@string/areas_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="6dp"
                android:ems="10"
                android:hint="@string/address_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/price_per_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="6dp"
                android:ems="10"
                android:hint="@string/price_per_area_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/working_content"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="6dp"
                android:ems="10"
                android:hint="@string/working_content_hint"
                android:inputType="textPersonName" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_weight="1"
        android:text="@string/setting_save" />


</LinearLayout>