<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- 온도 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="90dp"
                android:paddingLeft="0dp"
                android:paddingRight="30dp"
                android:fontFamily="sans-serif"
                android:textSize="12pt"
                android:text="@string/temperature"/>
            <ImageView
                android:id="@+id/temperature_jpg1"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginTop="70dp"
                android:paddingLeft="0dp"
                android:paddingRight="30dp"
                android:src="@drawable/temeprature"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="75dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="30dp"
                        android:fontFamily="sans-serif"
                        android:textSize="10pt"
                        android:text="@string/max_value"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="75dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="15dp"
                        android:fontFamily="sans-serif"
                        android:textSize="10pt"
                        android:text="@string/min_value"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/H_temp"
                        android:inputType="number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLength="4"
                        android:layout_marginLeft="8dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="30dp"/>
                    <EditText
                        android:id="@+id/L_temp"
                        android:inputType="number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLength="4"
                        android:layout_marginLeft="38dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="30dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- 습도 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:paddingLeft="0dp"
                android:paddingRight="30dp"
                android:fontFamily="sans-serif"
                android:textSize="12pt"
                android:text="@string/humidity"/>
            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="0dp"
                android:paddingRight="30dp"
                android:src="@drawable/humidity"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="30dp"
                        android:fontFamily="sans-serif"
                        android:textSize="10pt"
                        android:text="@string/max_value"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="15dp"
                        android:fontFamily="sans-serif"
                        android:textSize="10pt"
                        android:text="@string/min_value"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/H_humi"
                        android:inputType="number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLength="4"
                        android:layout_marginLeft="8dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="30dp"/>
                    <EditText
                        android:id="@+id/L_humi"
                        android:inputType="number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLength="4"
                        android:layout_marginLeft="38dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="30dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- CO2 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:paddingLeft="0dp"
                android:paddingRight="30dp"
                android:fontFamily="sans-serif"
                android:textSize="12pt"
                android:text="@string/co2"/>
            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="0dp"
                android:paddingRight="30dp"
                android:src="@drawable/co2"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="30dp"
                        android:fontFamily="sans-serif"
                        android:textSize="10pt"
                        android:text="@string/max_value"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="15dp"
                        android:fontFamily="sans-serif"
                        android:textSize="10pt"
                        android:text="@string/min_value"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/H_CO2"
                        android:inputType="number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLength="4"
                        android:layout_marginLeft="8dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="30dp"/>
                    <EditText
                        android:id="@+id/L_CO2"
                        android:inputType="number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLength="4"
                        android:layout_marginLeft="38dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="30dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- 뿌리 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="40dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:fontFamily="sans-serif"
                android:textSize="11pt"
                android:text="@string/root"/>
            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="0dp"
                android:paddingRight="30dp"
                android:src="@drawable/root"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="30dp"
                        android:fontFamily="sans-serif"
                        android:textSize="10pt"
                        android:text="@string/max_value"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="15dp"
                        android:fontFamily="sans-serif"
                        android:textSize="10pt"
                        android:text="@string/min_value"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/H_rootT"
                        android:inputType="number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLength="4"
                        android:layout_marginLeft="8dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="30dp"/>
                    <EditText
                        android:id="@+id/L_rootT"
                        android:inputType="number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLength="4"
                        android:layout_marginLeft="38dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="30dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- 토양 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="40dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:fontFamily="sans-serif"
                android:textSize="11pt"
                android:text="@string/soil"/>
            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="0dp"
                android:paddingRight="30dp"
                android:src="@drawable/soil"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="30dp"
                        android:fontFamily="sans-serif"
                        android:textSize="10pt"
                        android:text="@string/max_value"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="15dp"
                        android:fontFamily="sans-serif"
                        android:textSize="10pt"
                        android:text="@string/min_value"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/H_soil"
                        android:inputType="number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLength="4"
                        android:layout_marginLeft="8dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="30dp"/>
                    <EditText
                        android:id="@+id/L_soil"
                        android:inputType="number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLength="4"
                        android:layout_marginLeft="38dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="30dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
            <Button
                android:id="@+id/setting_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/setting_save"/>
        </LinearLayout>


        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="200dip"-->
        <!--android:background="#ff0000"-->
        <!--android:gravity="center"-->
        <!--android:text="#ff0000" />-->

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="200dip"-->
        <!--android:background="#00ff00"-->
        <!--android:gravity="center"-->
        <!--android:text="#00ff00" />-->

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="200dip"-->
        <!--android:background="#0000ff"-->
        <!--android:gravity="center"-->
        <!--android:text="#0000ff" />-->

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="200dip"-->
        <!--android:background="#FFFF00"-->
        <!--android:gravity="center"-->
        <!--android:text="#FFFF00" />-->
    </LinearLayout>

</ScrollView>